# dorm-energy-monitoring

./: .gitmodules  CMakeLists.txt  CNAME  README.md  docker-compose.yml  index.html  vcpkg.json
assets/: index-2pl0Skao.css  index-9vTTgfcz.js  index-B5cCjqvc.js  index-BEITuDVl.js  index-Bv8LAdXX.js  index-Bzh5vQjh.css  index-C5NnZ3M2.css  index-CIqKrnff.js  index-CZxbZveN.js  index-D0rAn7kN.js  index-D22xdvx-.js  index-DOyDYR3X.css
cmake/: core_library.cmake  dependencies.cmake  executable.cmake  options.cmake
docs/: 01_Problem_Definition.md  02_Requirements.md  03_Architecture.md  06_Roadmap.md  index.md
docs/adr/: 0001-cxx20-and-language-choice.md  0002-cli11-library.md  0003-data-storage.md  0004-hybrid-anomaly-detection.md  0005-synthetic-data-generator.md  0006-mqtt-for-esp32-communication.md  0007-telegram-bot-for-notifications.md  0008-onnx-runtime-for-ml-inference.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AlertCard.tsx  AnomaliesChart.tsx  DashboardHeader.tsx  Header.tsx  Navbar.tsx  PowerChart.tsx  RoomCard.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx  TopConsumersChart.tsx  TopRooms.tsx
frontend/src/layouts/: DashboardLayout.tsx  MainLayout.tsx
frontend/src/pages/: Analytics.tsx  Anomalies.tsx  BuildingAnalytics.tsx  BuildingDetails.tsx  Buildings.tsx  DeviceDetails.tsx  Devices.tsx  Home.tsx  Rooms.tsx  Settings.tsx
frontend/src/services/: api.ts  mockData.ts
frontend/src/types/: anomaly.ts  health.ts  room.ts  settings.ts  stats.ts
include/: anomaly_detector.hpp  csv_writer.hpp  measurement.hpp  simulator.hpp
include/dorm_energy/app/: application.hpp
include/dorm_energy/application/: application.hpp  application_builder.hpp  imessage_handler.hpp  inotifier.hpp  notifier_service.hpp  runtime.hpp
include/dorm_energy/core/: alert_severity.hpp  detection_context.hpp  measurement.hpp  room_state.hpp
include/dorm_energy/detection/: anomaly_detector.hpp
include/dorm_energy/logging/: logger.hpp
include/dorm_energy/mqtt/: mqtt_client.hpp
include/dorm_energy/simulation/: generator.hpp
migrations/: 001_initial_schema.sql  002_anomalies_table.sql
ml/: evaluate_model.py  requirements.txt  train_autoencoder.py
ml/models/: anomaly_autoencoder.onnx  anomaly_autoencoder.onnx.data  model.pth  threshold.txt
src/: anomaly_detector.cpp  csv_writer.cpp  main.cpp  simulator.cpp
src/app/: application.cpp
src/core/: measurement.cpp
src/detection/: anomaly_detector.cpp
src/dorm_energy/application/: application.cpp  application_builder.cpp  notifier_service.cpp  runtime.cpp
src/logging/: logger.cpp
src/mqtt/: mqtt_client.cpp
src/simulation/: generator.cpp
tests/: functtest.md  test_cli.cpp
(+87 files in other folders)
